	 * Each track has modifiable shuffle, once, ms_before, ms_after attributes and
	   read-only append, immediate, name, title attributes. They are also
	   comparable with == or ~=
   * wesnoth.set_music is now deprecated, in favour of the above new API
   * New wesnoth.sound_volume function gets/sets the current sound volume, as [volume]sound=
 * Multiplayer:
   * Fixed statistics being lost when reloading an MP game.
 * Performance:
   * Greatly speeded up switching between add-ons in the add-on manager
     (bug #25523)
 * User Interface:
   * Updated Attack Predictions dialog to GUI2.
   * Updated Story screen to GUI2.
   * Double-clicking an add-on now installs, updates, uninstalls or publishes it
     depending on the situation.
   * Fixed file path being truncated on the wrong side in the File Browser.
   * Improved Hotkey category sorting interface in Preferences.
   * Improved Addon Manager and MP Staging interfaces at low resolutions.
   * Fixed bug that allows you to use the minimap to bypass view locking
   * You can now change the theme (in preferences) while a game is in progress.
   * Fixed units moving after in game help exit. (#24644)
   * Fixed a bug that caused rapid announce messages to overlap eachother. (bug #21634)
 * WML Engine:
   * Add base_income key to [store_side]
   * Fix issues with alpha animations on hidden units (#14503)
   * Extensions to GUI2 Canvas ([drawing] tag in dialogs):
     * New [round_rectangle] shape - a rectangle plus corner_radius
     * [circle] shape can now be drawn filled; color key is now border_color
     * [image] has new resize_mode=tile_center
     * Canvas colors can now be expressed as formulas. The formula must return
       the color as a list of its components, eg "([r, g, b, a])"
   * Empty tags are no longer written to the configs of [unit]s and [side]s.
   * New [change_theme] tag to change the theme mid-scenario
   * New [zoom] tag allows changing the zoom level from an event