@@ -1523,6 +1523,10 @@ function wesnoth.wml_actions.zoom(cfg)
 	wesnoth.zoom(cfg.factor, cfg.relative)
 end
 
+function wesnoth.wml_actions.story(cfg)
+	wesnoth.show_story(cfg, cfg.title)
+end
+
 function wesnoth.wml_conditionals.proceed_to_next_scenario(cfg)
 	local endlevel_data = wesnoth.get_end_level_data()
 	if not endlevel_data then
